--- a/index.html
+++ b/index.html
@@ -1,13 +1,190 @@
-<header>
-    <html lang="en">
+<html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chao mung ban !!!</title>
-    <link rel="stylesheet" href="scr/css/styles.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>HTML 5 Boilerplate</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="scr/css/styles.css" />
   </head>
-  <body>
-	<script src="index.js"></script>
+  <body
+    class="min-h-screen sm:px-8 py-6 bg-gradient-to-br from-indigo-500 to-red-500"
+  >
+    <header class="grid grid-cols-6 sm:grid-cols-8 sm:gap-5 px-2 sm:px-10">
+      <span
+        class="flex items-center text-xl font-bold text-gray-100 space-x-2 col-span-2 sm:col-span-4"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-12 w-12"
+          viewBox="0 0 20 20"
+          fill="currentColor"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M3 5a2 2 0 012-2h10a2 2 0 012 2v8a2 2 0 01-2 2h-2.22l.123.489.804.804A1 1 0 0113 18H7a1 1 0 01-.707-1.707l.804-.804L7.22 15H5a2 2 0 01-2-2V5zm5.771 7H5V5h10v7H8.771z"
+            clip-rule="evenodd"
+          />
+        </svg>
+        <span class="">Tan Le</span>
+      </span>
+      <div class="ml-auto flex col-span-3">
+        <ul
+          class="list-none space-x-3 sm:space-x-6 sm:text-lg inline-flex items-center font-semibold"
+        >
+          <li class="text-gray-100 hover:text-blue-400 transition duration-200">
+            <a href="#homepage">Trang chủ</a>
+          </li>
+          <li class="text-gray-100 hover:text-blue-400 transition duration-200">
+            <a href="#product">Sản phẩm</a>
+          </li>
+        </ul>
+      </div>
+      <a href="login.html" class="flex items-center ml-auto sm:ml-0"
+        ><button
+          class="bg-gray-100 text-gray-800 flex font-bold rounded-md p-2 transition duration-200 transform hover:-translate-y-0.5 hover:bg-blue-500 hover:text-gray-100 drop-shadow-sm"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-6 w-6 mr-3"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1"
+            />
+          </svg>
+          <span class="hidden sm:inline-block">Đăng nhập</span>
+        </button>
+      </a>
+    </header>
+    <section
+      id="#homepage"
+      class="relative mt-5 mx-3 sm:mx-28 shadow-sm"
+      data-aos="fade-right"
+    >
+      <div
+        class="absolute bg-white opacity-60 backdrop-filter backdrop-blur-2xl rounded-lg inset-0"
+      ></div>
+      <div class="relative grid grid-cols-2">
+        <div class="col-span-2 sm:col-span-1">
+          <div class="space-y-6 max-w-3xl p-5">
+            <h1
+              class="text-gray-900 font-extrabold text-3xl sm:text-7xl justify-start"
+            >
+              Explore Every Ride with Ultimate Keebs Experience
+            </h1>
+            <img
+              class="sm:hidden self-center rounded-lg object-cover ml-auto shadow-md"
+              src="scr/img/Keyboard Images/axVWnvsNFLhp7v7Fm81MsRL4L9HwbmGM1IPJsSsQ9Bs.jpg"
+              alt=""
+            />
+            <p class="text-gray-600 text-sm justify-start">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Felis
+              eget velit aliquet sagittis id consectetur purus ut faucibus.
+            </p>
+            <div class="flex items-center space-x-3">
+              <a href="#"
+                ><button
+                  class="bg-purple-600 px-4 py-2 rounded-md font-semibold text-center text-gray-100 transform hover:-translate-y-0.5 hover:bg-purple-500 transition duration-200"
+                >
+                  Get it now
+                </button></a
+              >
+              <a href="#"
+                ><button
+                  class="text-center font-semibold text-gray-800 hover:text-gray-500 transition duration-200"
+                >
+                  Explore Device
+                </button></a
+              >
+            </div>
+          </div>
+        </div>
+        <img
+          class="hidden sm:block self-center m-2 max-w-xl object-cover col-span-1 ml-auto rounded-tr-lg rounded-br-lg shadow-md"
+          src="scr/img/Keyboard Images/axVWnvsNFLhp7v7Fm81MsRL4L9HwbmGM1IPJsSsQ9Bs.jpg"
+          alt=""
+        />
+      </div>
+    </section>
+    <section id="product" class="hidden sm:grid grid-cols-2 mb-64 mx-28 m-10">
+      <div class="col-span-1 flex space-x-10">
+        <div
+          class="relative group cursor-pointer"
+          data-aos="fade-up"
+          data-aos-anchor-placement="center-center"
+          data-aos-duration="200"
+        >
+        <img
+          class="max-w-sm rounded-md group-hover:-translate-y-2 transition duration-200"
+          src="scr/img/Keyboard Images/ao4xefvx33i51.jpg"
+          alt=""
+        />
+          <div
+            class="absolute inset-0 bg-gray-700 bg-opacity-50 backdrop-filter backdrop-blur-md top-auto h-1/3 rounded-lg bottom-16 group-hover:-translate-y-2 transition duration-200"
+          ></div>
+          <div class="absolute top-auto bottom-20 ml-3 space-y-5 group-hover:-translate-y-2 transition duration-200">
+            <h1 class="text-white font-semibold text-lg">Keyboard 1</h1>
+            <p class="text-gray-300">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Volutpat sed cras ornare arcu dui vivamus arcu.
+            </p>
+          </div>
+        </div>
+        <div
+          class="relative group cursor-pointer"
+          data-aos="fade-up"
+          data-aos-anchor-placement="center-center"
+          data-aos-duration="400"
+        >
+          <img
+            class="relative top-1/4 max-w-sm rounded-lg group-hover:-translate-y-2 transition duration-200"
+            src="scr/img/Keyboard Images/gdbt3pipmyf51.jpg"
+            alt=""
+          />
+          <div
+            class="absolute inset-0 bg-gray-700 bg-opacity-50 backdrop-filter backdrop-blur-md top-auto h-1/3 rounded-lg -bottom-[9.2rem] group-hover:-translate-y-2 transition duration-200"
+          ></div>
+          <div class="absolute top-auto -bottom-32 ml-3 space-y-5 group-hover:-translate-y-2 transition duration-200">
+            <h1 class="text-white font-semibold text-lg">Keyboard 2</h1>
+            <p class="text-gray-300">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Volutpat sed cras ornare arcu dui vivamus arcu.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div
+        class="col-span-1 flex items-center"
+        data-aos="fade-up"
+        data-aos-anchor-placement="center-center"
+        data-aos-duration="900"
+      >
+        <div class="max-w-lg ml-auto space-y-5">
+          <h1 class="text-white text-6xl font-semibold flex items-center">
+            The Advantages of Our Keyboard That We Offer So Far
+          </h1>
+          <p class="text-gray-300">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat
+            sed cras ornare arcu dui vivamus arcu.
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      delay: 0,
+    });
+  </script>
 </html>
-</header>
