--- a/index.html
+++ b/index.html
@@ -193,10 +193,7 @@
         <div
           id="products"
           class="gap-x-4 gap-y-4 grid grid-cols-2 md:grid-cols-3 xl:grid-cols-4"
-        >
-
-        
-        </div>
+        ></div>
       </div>
     </section>
   </body>
@@ -223,7 +220,11 @@
     const app = initializeApp(firebaseConfig);
     const analytics = getAnalytics(app);
   </script>
-  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script
+    src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+    crossorigin="anonymous"
+  ></script>
   <script src="index.js"></script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
