--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink to fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink to fit=no"
+    />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>HTML 5 Boilerplate</title>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -36,7 +39,7 @@
             <a href="#homepage">Homepage</a>
           </li>
           <li class="text-gray-100 hover:text-blue-400 transition duration-200">
-            <a href="#products">Products</a>
+            <a href="#products-section">Products</a>
           </li>
         </ul>
       </div>
@@ -187,9 +190,19 @@
         </div>
       </div>
     </section>
-    <section class="bg-white/60 rounded-lg mt-5 mx-3 sm:mx-28 shadow-sm">
+    <section
+      class="bg-white/60 rounded-lg mt-5 mx-3 sm:mx-28 shadow-sm"
+      data-aos="fade-up"
+      data-aos-anchor-placement="top-center"
+      data-aos-duration="400"
+    >
       <div class="px-3 sm:px-10 py-20 pt-3">
-        <h2 class="text-gray-800 font-semibold text-2xl mb-8">Products</h2>
+        <h2
+          class="text-gray-800 font-semibold text-2xl mb-8"
+          id="products-section"
+        >
+          Products
+        </h2>
         <div
           id="products"
           class="gap-x-4 gap-y-4 grid grid-cols-2 md:grid-cols-3 xl:grid-cols-4"
