--- a/login.html
+++ b/login.html
@@ -1,85 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login</title>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tailus - Login</title>
-
-    <link rel="stylesheet" href="scr/css/styles.css">
+    <link rel="stylesheet" href="scr/styles.css" />
     <link
-        href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400&display=swap"
-        rel="stylesheet">
-</head>
+      href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
-    <div class="2xl:container h-screen m-auto">
-        <div hidden class="fixed inset-0 w-7/12 lg:block">
-            <video class="w-full h-full object-cover" src="scr/img/Laptop_1_Videvo.mov" loop autoplay muted></video>
-        </div>
-        <div hidden role="hidden" class="fixed inset-0 w-6/12 ml-auto bg-white bg-opacity-70 backdrop-filter backdrop-blur-2xl lg:block">
-        </div>
-        <div class="relative h-full ml-auto lg:w-6/12">
-            <div class="m-auto py-12 px-6 sm:p-20 xl:w-10/12">
-                <div class="space-y-4">
-                    <a href="">
-                        <img src="" class="w-40" alt="tailus logo">
-                    </a>
-                    <p class="font-medium text-lg text-gray-600">Welcome to tailus ! Login first</p>
-                </div>
-
-                <div class="mt-12 grid gap-6 sm:grid-cols-2">
-                    <button
-                        class="py-3 px-6 rounded-xl bg-blue-50 hover:bg-blue-100 focus:bg-blue-100 active:bg-blue-200">
-                        <div class="flex gap-4 justify-center">
-                            <img src="" class="w-5" alt="">
-                            <span class="block w-max font-medium tracking-wide text-sm text-blue-700">with Google</span>
-                        </div>
-                    </button>
-                    <button
-                        class="py-3 px-6 rounded-xl bg-gray-900 transition hover:bg-gray-800 active:bg-gray-600 focus:bg-gray-700">
-                        <div class="flex gap-4 items-center justify-center text-white">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-5" viewBox="0 0 16 16">
-                                <path
-                                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
-                            </svg>
-                            <span class="block w-max font-medium tracking-wide text-sm text-white">with Github</span>
-                        </div>
-                    </button>
-                </div>
-
-                <div role="hidden" class="mt-12 border-t">
-                    <span class="block w-max mx-auto -mt-3 px-4 text-center text-gray-500 bg-white">Or</span>
-                </div>
-
-                <form action="" class="space-y-6 py-6">
-                    <div>
-                        <input type="email" placeholder="Your Email"
-                            class="w-full py-3 px-6 ring-1 ring-gray-300 rounded-xl placeholder-gray-600 bg-transparent transition disabled:ring-gray-200 disabled:bg-gray-100 disabled:placeholder-gray-400 invalid:ring-red-400 focus:invalid:outline-none">
-                    </div>
-
-                    <div class="flex flex-col items-end">
-                        <input type="password" placeholder="What's the secret word ?"
-                            class="w-full py-3 px-6 ring-1 ring-gray-300 rounded-xl placeholder-gray-600 bg-transparent transition disabled:ring-gray-200 disabled:bg-gray-100 disabled:placeholder-gray-400 invalid:ring-red-400 focus:invalid:outline-none">
-                        <button type="reset" class="w-max p-3 -mr-3">
-                            <span class="text-sm tracking-wide text-blue-600">Forgot password ?</span>
-                        </button>
-                    </div>
-
-                    <div>
-                        <button
-                            class="w-full px-6 py-3 rounded-xl bg-gray-500 transition hover:bg-gray-600 focus:bg-gray-600 active:bg-gray-800">
-                            <span class="font-semibold text-white text-lg">Login</span>
-                        </button>
-                        <a href="#" type="reset" class="w-max p-3 -ml-3">
-                            <span class="text-sm tracking-wide text-blue-600">Create new account</span>
-                        </a>
-                    </div>
-                </form>
+  <body class="">
+    <div class="lg:mx-5 2xl:mx-20 h-screen m-auto">
+      <div hidden class="fixed inset-0 w-8/12 lg:block">
+        <video
+          class="w-full h-full object-cover"
+          autoplay
+          loop
+          muted
+          src="https://firebasestorage.googleapis.com/v0/b/the-round-table-ffc3f.appspot.com/o/e-commerce%2Flogin%2Fvideoplayback.mp4?alt=media&token=be119760-b6ab-44e1-b1b3-0d4ad4908712"
+        ></video>
+      </div>
+      <div
+        class="fixed inset-0 w-5/12 ml-auto bg-white/50 backdrop-filter backdrop-blur-3xl lg:block"
+      ></div>
+      <div class="relative h-full ml-auto lg:w-4/12 2xl:w-3/12">
+        <a
+          href="index.html"
+          class="flex w-48 mt-5 mx-6 ml-auto bg-gray-200 text-gray-800 font-bold rounded-md p-2 transition duration-200 transform hover:-translate-y-1 hover:-translate-x-1 hover:bg-blue-500 hover:text-gray-100 drop-shadow-sm"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-6 w-6 sm:mr-3"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1"
+            />
+          </svg>
+          <span class="inline-block">To Home Page</span>
+        </a>
+        <div class="m-auto py-12 px-6 sm:py-20">
+          <div class="space-y-4">
+            <span
+              class="flex items-center text-xl font-bold text-gray-700 space-x-2 col-span-2 sm:col-span-4"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-12 w-12"
+                viewBox="0 0 20 20"
+                fill="currentColor"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M3 5a2 2 0 012-2h10a2 2 0 012 2v8a2 2 0 01-2 2h-2.22l.123.489.804.804A1 1 0 0113 18H7a1 1 0 01-.707-1.707l.804-.804L7.22 15H5a2 2 0 01-2-2V5zm5.771 7H5V5h10v7H8.771z"
+                  clip-rule="evenodd"
+                />
+              </svg>
+              <span class="">Tan Le</span>
+            </span>
+          </div>
+          <div class="my-6 border-t"></div>
+          <form action="" class="space-y-6 py-6 placeholder:text-white">
+            <div>
+              <input
+                type="email"
+                placeholder="Your Email"
+                class="placeholder:text-gray-600 w-full py-3 px-6 ring-1 ring-gray-300 rounded-xl placeholder-gray-600 bg-transparent transition disabled:ring-gray-200 disabled:bg-gray-100 disabled:placeholder-gray-400 invalid:ring-red-400 focus:invalid:outline-none"
+              />
             </div>
-        </div>
-    </div>
-</body>
 
+            <div class="flex flex-col items-end">
+              <input
+                type="password"
+                placeholder="Your password"
+                class="placeholder:text-gray-600 w-full py-3 px-6 ring-1 ring-gray-300 rounded-xl placeholder-gray-600 bg-transparent transition disabled:ring-gray-200 disabled:bg-gray-100 disabled:placeholder-gray-400 invalid:ring-red-400 focus:invalid:outline-none"
+              />
+            </div>
+            <div>
+              <button
+                class="mt-10 w-full px-6 py-3 rounded-xl bg-blue-600 transition hover:bg-blue-500 focus:bg-blue-600 active:bg-blue-800"
+              >
+                <span class="font-semibold text-white text-lg">Login</span>
+              </button>
+              <a href="#" type="reset" class="w-max p-3 -ml-3">
+                <span class="text-sm tracking-wide text-blue-600"
+                  >Create new account</span
+                >
+              </a>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
